--- a/config.yaml
+++ b/config.yaml
@@ -16,7 +16,8 @@ packages:
     proxy: npmjs
     access: $all
     publish: $authenticated
-
+logs:
+  - {type: stdout, format: pretty, level: http}
 middlewares:
   gitlab-oauth:
     enabled: true
